--- a/web/package.json
+++ b/web/package.json
@@ -53,7 +53,8 @@
 		"vue-i18n": "^9.2.2",
 		"vue-router": "^4.1.6",
 		"vxe-table": "^4.4.1",
-		"xe-utils": "^3.5.7"
+		"xe-utils": "^3.5.7",
+		"yarn": "^1.22.22"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.13",
