--- a/staffweb/package.json
+++ b/staffweb/package.json
@@ -32,6 +32,7 @@
 		"js-cookie": "^3.0.1",
 		"js-table2excel": "^1.0.3",
 		"jsplumb": "^2.15.6",
+		"lottie-web": "^5.12.2",
 		"mitt": "^3.0.0",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.28",
