--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
 		"jsplumb": "^2.15.6",
 		"mitt": "^3.0.0",
 		"nprogress": "^0.2.0",
+		"ntp-client": "^0.5.3",
 		"pinia": "^2.0.28",
 		"pinia-plugin-persist": "^1.0.0",
 		"postcss": "^8.4.21",
