--- a/staffweb/package.json
+++ b/staffweb/package.json
@@ -47,6 +47,7 @@
 		"tailwindcss": "^3.2.7",
 		"ts-md5": "^1.3.1",
 		"upgrade": "^1.1.0",
+		"vanilla-tilt": "^1.8.1",
 		"vue": "^3.2.45",
 		"vue-clipboard3": "^2.0.0",
 		"vue-cropper": "^1.0.8",
