--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,3 +29,7 @@ gunicorn==21.2.0
 gevent==23.9.1
 Pillow==10.1.0
 dvadmin-celery==1.0.5
+numpy==1.26.4 
+scipy==1.13.0
+pandas==2.2.2
+pymysql==1.1.0
