--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
 		"vue-router": "^4.1.6",
 		"vxe-table": "^4.4.1",
 		"xe-utils": "^3.5.7",
+		"xlsx": "^0.18.5",
 		"yarn": "^1.22.22"
 	},
 	"devDependencies": {
