--- a/docker_env/django/Dockerfile
+++ b/docker_env/django/Dockerfile
@@ -6,4 +6,5 @@ RUN awk 'BEGIN { cmd="cp -i ./conf/env.example.py   ./conf/env.py "; print "n" |
 RUN sed -i "s|DATABASE_HOST = "127.0.0.1"|DATABASE_HOST = '177.10.0.1'|g" ./conf/env.py
 RUN sed -i "s|REDIS_HOST = '127.0.0.1'|REDIS_HOST = '177.10.0.1'|g" ./conf/env.py
 RUN python3 -m pip install -i https://pypi.tuna.tsinghua.edu.cn/simple/ -r requirements.txt
-CMD ["/backend/docker_start.sh"]
+RUN chmod 777 /backend/docker_start.sh
+CMD ["/bin/bash", "/backend/docker_start.sh"]
