--- a/docker_env/web/Dockerfile
+++ b/docker_env/web/Dockerfile
@@ -1,8 +1,9 @@
 FROM registry.cn-zhangjiakou.aliyuncs.com/dvadmin-pro/dvadmin3-base-web:16.19-alpine
 WORKDIR /web/
 COPY web/. .
-RUN yarn install --registry=https://registry.npm.taobao.org
-RUN yarn build
+RUN npm install -g pnpm@latest-8
+RUN pnpm install 
+RUN pnpm build
 
 FROM nginx:alpine
 COPY ./docker_env/nginx/my.conf /etc/nginx/conf.d/my.conf
