--- a/web/package.json
+++ b/web/package.json
@@ -46,6 +46,7 @@
 		"splitpanes": "^3.1.5",
 		"tailwindcss": "^3.2.7",
 		"ts-md5": "^1.3.1",
+		"typeit": "^8.8.3",
 		"upgrade": "^1.1.0",
 		"vue": "^3.2.45",
 		"vue-clipboard3": "^2.0.0",
