--- a/web/.env
+++ b/web/.env
@@ -5,4 +5,4 @@ VITE_API_URL = 'http://dvadmin3api.django.icu:8001'
 VITE_OPEN = false
 
 # public path 配置线上环境路径（打包）、本地通过 http-server 访问时，请置空即可
-VITE_PUBLIC_PATH = /
+VITE_PUBLIC_PATH = /Superadmin/
