fix:menu_id 为空的bug

--- a/docker_env/web/Dockerfile
+++ b/docker_env/web/Dockerfile
@@ -1,8 +1,8 @@
 FROM registry.cn-zhangjiakou.aliyuncs.com/dvadmin-pro/dvadmin3-base-web:16.19-alpine
 WORKDIR /web/
 COPY web/. .
-RUN npm install -g pnpm@latest-8
-RUN pnpm install 
+RUN npm install -g pnpm@latest-8 --registry https://registry.npmmirror.com
+RUN pnpm install  --registry https://registry.npmmirror.com
 RUN pnpm build
 
 FROM nginx:alpine
