--- a/docker_env/staffweb/Dockerfile
+++ b/docker_env/staffweb/Dockerfile
@@ -1,8 +1,8 @@
 FROM registry.cn-zhangjiakou.aliyuncs.com/dvadmin-pro/dvadmin3-base-web:16.19-alpine
 WORKDIR /staffweb/
 COPY staffweb/. .
-RUN npm install -g pnpm@latest-8
-RUN pnpm install 
+RUN npm install -g pnpm@latest-8 --registry https://registry.npmmirror.com
+RUN pnpm install --registry https://registry.npmmirror.com
 RUN pnpm build
 
 FROM nginx:alpine
